feat: implement new field in user table
